Fixed messaging overflow and spacing

--- a/app/src/components/App/Navbar/navbar.scss
+++ b/app/src/components/App/Navbar/navbar.scss
@@ -4,10 +4,9 @@ header {
 	grid-area: nav;
 	border-bottom: 1px solid #474a4f;
 
-	display: grid;
-	grid-template-columns: $grid-columns;
 
 	nav {
+		height: 100%;
 		grid-column: 2 / 3;
 
 		ul {
